# lez-weighted-math

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  zkvm.yml
crates/harness/: Cargo.toml
crates/harness/balancer-ref/: .gitignore  README.md  capture.sh  foundry.toml  inputs_flat.json
crates/harness/balancer-ref/script/: PowCapture.s.sol
crates/harness/fixtures/: arith.json  balancer_inputs.json  balancer_pow.json  in_given_out.json  ln_exp.json  out_given_in.json  pow.json  scales.json
crates/harness/oracle/: README.md  gen.py
crates/harness/src/: lib.rs
crates/harness/tests/: differential.rs  overflow_envelope.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs
crates/weighted-math-core/: Cargo.toml
crates/weighted-math-core/src/: fixed.rs  lib.rs  pow.rs  weighted.rs  wide.rs
docs/: error-analysis.md  overflow-proof.md  zkvm-cycles.md
docs/adr/: 0001-open-decisions.md  0001-test-harness-architecture.md  0002-test-harness-architecture.md  0002-u128-balances.md  0003-fixed-point-scale.md  0003-u128-balances.md  0004-fixed-point-scale.md  0004-series-choice.md  0005-expm1-boundary.md  0005-series-choice.md  0006-expm1-boundary.md  0006-in-given-out-inversion.md  0007-in-given-out-inversion.md  0007-invariant-referee.md  0008-integer-width.md  0008-invariant-referee.md  0009-integer-width.md
docs/archive/: 0001-open-decisions.md  README.md
docs/archive/handoffs/: 2026-07-09-i128-vs-i256-decision.md
docs/archive/plans/: 0001-test-harness.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: trade_invariant.rs
zkvm/: Cargo.toml  README.md  rust-toolchain.toml
zkvm/host/: Cargo.toml
zkvm/host/src/: main.rs
zkvm/methods/: Cargo.toml
zkvm/methods/guest/: Cargo.toml
zkvm/methods/guest/src/: main.rs
zkvm/methods/src/: lib.rs
